--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.css
@@ -67,3 +67,10 @@
     width: 100%;
     flex-direction: row;
 }
+
+#dashboard-content{
+    /* background-image: url("../../../../../assets/images/fondo2.png");
+    background-repeat: no-repeat;
+    background-size: cover; */
+    background-color: white;
+}
