--- a/frontend/Proyecto/src/app/componentes/auxiliares/paginacion/paginacion.component.css
+++ b/frontend/Proyecto/src/app/componentes/auxiliares/paginacion/paginacion.component.css
@@ -1,3 +1,24 @@
+
 .page-item{
     cursor: pointer;
+}
+
+#indices{
+    text-align: center;
+}
+
+a{
+    color: #018d97;
+    font-weight: 500;
+}
+
+a:hover{
+    color: #00B4C0;
+    font-weight: 500;
+}
+
+.active a{
+    background-color: #00B4C0;
+    border-color: #00B4C0;
+    color: white;
 }
