--- a/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
@@ -1,12 +1,11 @@
 <div id="container">
-    <div id="documentos" class="w-100">
-        <div id="caja"></div>
-        <div id="boton-volver" class="mt-4 ms-4 d-none">
+    <div id="documentos" class="">
+        <!-- <div id="boton-volver" class="mt-4 ms-4 d-none">
             <button class="btn btn-primary btn-block">
                 <img alt="volver" src="assets/volver.png" width="25px">
                 Volver
             </button>
-        </div>
+        </div> -->
         <div *ngIf="loanding" id="loader" class="w-100">
             <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="'primary'" [mode]="'indeterminate'">
             </mat-progress-spinner>
@@ -19,29 +18,33 @@
             </div>
         </div>
         <div id="seccion-botones" class="mt-4 mb-4">
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center col-6">
+                <button id="buscador" (click)=buscador(valor) class="btn btn-outline-secondary"><mat-icon>search</mat-icon></button>
                 <input #valor (change)=buscador(valor) id="inputbuscador" type="text">
-                <button id="buscador" (click)=buscador(valor) class="btn btn-outline-secondary"><img alt="buscador" src="assets/lupa.png" width="25px"></button>
             </div>
 
-            <div class="d-flex justify-content-center align-items-center">
+            <!-- <div class="d-flex justify-content-center align-items-center">
                 <img class="me-1" alt="buscador" src="assets/filtro.png" width="30px">
                 <select aria-label="Todos" id="documentos">
                     <option value="TODOS" selected>Seleccione una opción</option>
                     <option></option>
                 </select>
-            </div>
+            </div> -->
 
-            <fieldset [disabled]=!enviarDocumentos>
-                <div>
-                    <input #doc (change)="capturarFile(doc)" class="form-control"
-                    id="inputDoc" name="inputDoc" type="file" accept=".xml" multiple> <!-- Aqu se ccambia se el tipo de archivo también aceppt y el multiple sirve para cargara varios-->
-                    <div *ngIf="previsualizacion">
+            <fieldset [disabled]=!enviarDocumentos class="col-6">
+                <div class="row">
+                    <div class="col-9">
+                        <input #doc (change)="capturarFile(doc)" class="form-control col-9"
+                        id="inputDoc" name="inputDoc" type="file" accept=".xml" multiple> <!-- Aqu se ccambia se el tipo de archivo también aceppt y el multiple sirve para cargara varios-->
+                    </div>
+                    <!-- <div *ngIf="previsualizacion">
                         <label class="cargaArchivo">Archivos cargados:
                             <label>{{previsualizacion}}</label>
                         </label>
+                    </div> -->
+                    <div class="col-3 row justify-content-end">
+                        <input type="submit" value="subir" [disabled]="enviar" (click)="subirArchivos(doc)" class="col-9">
                     </div>
-                    <input type="submit" [disabled]="enviar" (click) = "subirArchivos(doc)">
                 </div>
                 <div class="center ">
                     <div *ngIf = "totalDocs > 0 && loanding" mode="buffer">
@@ -80,19 +83,21 @@
                         <td>{{doc.cliente!=null?doc.cliente:"------"}}</td>
                         <td>{{doc.tipoCreacion!=null?doc.tipoCreacion.name:"------"}}</td>
                         <td>{{doc.estado!=null?doc.estado.name:"------"}}</td>
-                        <td id="iconos" class="w-100 h-40">
-                            <img alt="visualizar" src="assets/vision.png" width="15px">
-                            <img alt="recharge" src="assets/cargando-flechas.png" width="10px">
-                            <button class="btn btn-primary" (click) = "descargardoc(doc.id)">
-                                <img alt="download" src="assets/descargar.png" width="10px">
-                            </button>
-                            <img alt="delete" src="assets/eliminar.png" width="10px">
+                        <td class="iconos w-100 h-40">
+                            <!-- <img alt="visualizar" src="assets/vision.png" width="15px">
+                            <img alt="recharge" src="assets/cargando-flechas.png" width="10px"> -->
+                            <a class="btn btn-primary" (click) = "descargardoc(doc.id)">
+                                <mat-icon>download</mat-icon>
+                            </a>
+                            <!-- <img alt="delete" src="assets/eliminar.png" width="10px"> -->
                         </td>
 
                     </tr>
                 </tbody>
             </table>
-            <list-pagination urlRequest="/api/documentos/buscar_por_empresa/{{nombreDocumento}}" (listObjects)="obtenerObjetos($event)"></list-pagination>
+            <div class="row justify-content-center">
+                <list-pagination class="col-9 row" urlRequest="/api/documentos/buscar_por_empresa/{{nombreDocumento}}" (listObjects)="obtenerObjetos($event)"></list-pagination>
+            </div>
         </div>        
     </div>
 </div>
