--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
@@ -1,6 +1,5 @@
 <div id="container">
-    <div id="tabla" class="table-responsive">
-        <div id="caja"></div>
+    <div id="tabla" class="">
         <h1 id="title" class="text-center font-weight-bold mt-5">Roles</h1>
         <div class="mt-2 mb-4 d-flex flex-row justify-content-around">
             <!--<div class="d-flex align-items-center">
@@ -32,7 +31,9 @@
 
                 </tbody>
             </table>
-            <list-pagination urlRequest="/api/user/grupos/" (listObjects)='obtenerObjetos($event)' ></list-pagination>
+            <div class="row justify-content-center">
+                <list-pagination class="col-9 row" urlRequest="/api/user/grupos/" (listObjects)='obtenerObjetos($event)' ></list-pagination>
+            </div>
         </div>
     </div>
 </div>
