--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.css
@@ -1,33 +1,43 @@
-#caja{
+/* #caja{
     display: flex;
     background-color: black;
     height: 120px;
     border-bottom-right-radius: 18% 75%;
-}
+} */
+
+#tabla{
+    /* height: 40px; */
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 #title{
     font-weight: bold;
 }
 
-#tabla{
+/* #tabla{
     display: flex;
     flex-direction: column;
     width: 100%;
-}
+} */
 
 #buscador{
     height: 50px;
     width: 55px;
   }
   
-  #inputbuscador{
-    height: 50px;
-    width: 250px;
-  }
-
-th,td{
-    text-align: center;
+#inputbuscador{
+height: 50px;
+width: 250px;
 }
+
+/* th,td{
+    text-align: center;
+} */
 
 button{
     margin: 0 2% 0 0;
@@ -36,3 +46,59 @@ button{
 button.delete{
     background-color: rgb(232, 78, 78);
 }
+
+table{
+    border-collapse: separate;
+    border-spacing: 0 10px;
+  }
+  
+  table > tbody, table >  thead{
+    vertical-align:middle;
+  }
+  
+  tr  td:first-child{
+    border-left-style: solid;
+    border-top-left-radius: 10px; 
+    border-bottom-left-radius: 10px;
+  }
+  td:last-child {
+    border-right-style: solid;
+    border-bottom-right-radius: 10px !important; 
+    border-top-right-radius: 10px !important; 
+  }
+  
+  thead th{
+    color: #34448E;
+    font-size: 16px ;
+    font-weight: 500;
+    /* -webkit-text-stroke: 0.25px black; */
+  }
+  
+  th{
+      text-align: center;
+  }
+  
+  td{
+      font-size: smaller;
+      width: 120px;
+      text-align: center;
+  
+  }
+  
+  tbody td{
+    background-color: #EEEEEE;
+    color:black;
+    font-weight: 500;
+  }
+    
+  /* table tbody tr:nth-child(odd){
+    background: #b9b9b9;
+  }
+  
+  table tbody tr:nth-child(even){
+    background: #fff8e5;
+  } */
+  
+  #tableBody{
+    border: none;
+  }
