--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
@@ -1,6 +1,6 @@
 <div id="container">
-    <div id="tabla" class="table-responsive">
-        <div id="caja"></div>
+    <div id="tabla" class="">
+        <!-- <div id="caja"></div> -->
         <h1 id="title" class="text-center font-weight-bold mt-5">Usuarios</h1>
         <div class="mt-2 mb-4 d-flex flex-row justify-content-around">
             <!--<div class="d-flex align-items-center">
@@ -36,7 +36,9 @@
 
                 </tbody>
             </table>
-            <list-pagination urlRequest="/api/user/lista-de-profiles/" (listObjects)="obtenerObjetos($event)"></list-pagination>
+            <div class="row justify-content-center">
+                <list-pagination class="col-9 row" urlRequest="/api/user/lista-de-profiles/" (listObjects)="obtenerObjetos($event)"></list-pagination>
+            </div>
         </div>
     </div>
 </div>
