Se hicieron algunas modificaciones al diseño.

--- a/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/documentos-company/documentos-company.component.html
@@ -86,6 +86,9 @@
                         <td class="iconos w-100 h-40">
                             <!-- <img alt="visualizar" src="assets/vision.png" width="15px">
                             <img alt="recharge" src="assets/cargando-flechas.png" width="10px"> -->
+                            <a class="btn btn-primary" (click) = "visualizardoc(doc.id)" >
+                                <mat-icon>visibility</mat-icon>
+                            </a>
                             <a class="btn btn-primary" (click) = "descargardoc(doc.id)">
                                 <mat-icon>download</mat-icon>
                             </a>
