--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
@@ -1,13 +1,16 @@
 <div id="container">
     <div id="tabla" class="">
         <h1 id="title" class="text-center font-weight-bold mt-5">Roles</h1>
-        <div class="mt-2 mb-4 d-flex flex-row justify-content-around">
+        <div class="mt-2 mb-4 d-flex flex-row justify-content-end">
             <!--<div class="d-flex align-items-center">
                 <input #valor (change)=buscador(valor) id="inputbuscador" type="text">
                 <button id="buscador" (click)=buscador(valor) class="btn btn-outline-secondary"><img alt="buscador" src="assets/lupa.png" width="25px"></button>
             </div>-->
-            <div >
-                <button (click)="crearGrupo()" class="{{agregarGrupo}} btn btn-primary btn-block">Agregar nuevo rol</button>
+            <div class="row col-2">
+                <button (click)="crearGrupo()" class="{{agregarGrupo}}  row align-items-center justify-content-center  btn-primary btn-block">
+                    <mat-icon class="col-4">assignment_ind</mat-icon>
+                    <span class="col-8">Nuevo rol</span>
+                </button>
             </div>
         </div>
         <div class="table-wrapper">
@@ -23,16 +26,19 @@
                     <tr>
                         <td #id>{{grupo.id}}</td>
                         <td>{{grupo.name}}</td>
-                        <td> 
-                            <button (click)="envioId(id)" class=" {{editarGrupo}} btn btn-primary btn-block">Editar</button>
-                            <button id={{grupo.id}} (click)="borrarGrupo(id)" class="delete {{eliminarGrupo}} btn btn-block"> Borrar </button>
+                        <td>
+                            <button (click)="envioId(id)"
+                                class=" {{editarGrupo}} btn btn-primary btn-block">Editar</button>
+                            <button id={{grupo.id}} (click)="borrarGrupo(id)"
+                                class="delete {{eliminarGrupo}} btn btn-block"> Borrar </button>
                         </td>
                     </tr>
 
                 </tbody>
             </table>
             <div class="row justify-content-center">
-                <list-pagination class="col-9 row" urlRequest="/api/user/grupos/" (listObjects)='obtenerObjetos($event)' ></list-pagination>
+                <list-pagination class="col-9 row" urlRequest="/api/user/grupos/"
+                    (listObjects)='obtenerObjetos($event)'></list-pagination>
             </div>
         </div>
     </div>
