Prototipo de factura

--- a/backend/assets/templates/comprobantes/factura.html
+++ b/backend/assets/templates/comprobantes/factura.html
@@ -1,1 +1,455 @@
-<span>hola, esto es un pdf</span>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+
+  <title>Visualización Documento electrónico</title>
+  <meta name="author" content="htmlGenerator">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css">
+
+  <style>
+    body {
+      background: #E5E5E5;
+    }
+
+    .e503_4234 {
+      overflow: hidden;
+    }
+
+    .e503_4234 {
+      background-color: rgba(246.49999290704727, 22.595821917057037, 22.595821917057037, 1);
+      width: 595px;
+      height: 842px;
+      position: absolute;
+    }
+
+    .e503_4804 {
+      width: 311px;
+      height: 347.3823547363281px;
+      position: absolute;
+      left: 271px;
+      top: 36px;
+    }
+
+    .e503_4805 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 311px;
+      height: 347.3823547363281px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-radius: 24px;
+    }
+
+    .e503_4805 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+
+    .e508_4867 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 124.08586120605469px;
+      height: 17.323516845703125px;
+      position: absolute;
+      left: 94px;
+      top: 324px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 14px;
+      letter-spacing: 0;
+    }
+
+    .e503_4862 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 210.61767578125px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_4864 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 237.970703125px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4861 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 183.2646484375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4860 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 155.91162109375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4858 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 127px;
+      height: 18px;
+      position: absolute;
+      left: 8px;
+      top: 101px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4859 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 150px;
+      height: 19px;
+      position: absolute;
+      left: 8px;
+      top: 128px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4857 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 73.85302734375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 14px;
+      letter-spacing: 0;
+    }
+
+    .e503_4856 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 97px;
+      height: 18px;
+      position: absolute;
+      left: 8px;
+      top: 47px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e503_4855 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 8.218985557556152px;
+      top: 20.05859375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 14px;
+      letter-spacing: 0;
+    }
+
+    .e503_4355 {
+      width: 252px;
+      height: 174px;
+      position: absolute;
+      left: 11.999961853027344px;
+      top: 36px;
+    }
+
+    .e503_4356 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 252px;
+      height: 174px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-top-left-radius: 24px;
+      border-top-right-radius: 24px;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+
+    .e503_4356 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+
+    .e508_5174 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 108.0636215209961px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 10px;
+      top: 129px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5172 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 108.0636215209961px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 10px;
+      top: 78px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5173 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 120.7938232421875px;
+      height: 18px;
+      position: absolute;
+      left: 10px;
+      top: 103px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5171 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 108.0636215209961px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 10px;
+      top: 54px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5170 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 108.0636215209961px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 13.505806922912598px;
+      top: 19.14697265625px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 14px;
+      letter-spacing: 0;
+    }
+
+    .e503_4802 {
+      width: 570px;
+      height: 214px;
+      position: absolute;
+      left: 12px;
+      top: 390px;
+    }
+
+    .e503_4803 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 570px;
+      height: 214px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-top-left-radius: 24px;
+      border-top-right-radius: 24px;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+
+    .e503_4803 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+
+    .e508_5164 {
+      width: 311px;
+      height: 215px;
+      position: absolute;
+      left: 271px;
+      top: 614px;
+    }
+
+    .e508_5165 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 311px;
+      height: 215px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-top-left-radius: 24px;
+      border-top-right-radius: 24px;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+
+    .e508_5165 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+
+    .e503_4800 {
+      width: 252px;
+      height: 124px;
+      position: absolute;
+      left: 12px;
+      top: 222px;
+    }
+
+    .e503_4801 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 252px;
+      height: 124px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-top-left-radius: 24px;
+      border-top-right-radius: 24px;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+
+    .e503_4801 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+
+    .e508_5169 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 111.26548767089844px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 6.633518218994141px;
+      top: 93.470703125px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5166 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 35.09121322631836px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 7px;
+      top: 50px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5161 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 187px;
+      height: 18px;
+      position: absolute;
+      left: 7px;
+      top: 20px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e508_5168 {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 111.26548767089844px;
+      height: 18.23529052734375px;
+      position: absolute;
+      left: 6px;
+      top: 70px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+
+    .e513_4314 {
+      width: 252px;
+      height: 153px;
+      position: absolute;
+      left: 12px;
+      top: 627px;
+    }
+
+    .e513_4315 {
+      background-color: rgba(255, 255, 255, 1);
+      width: 252px;
+      height: 153px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      border-top-left-radius: 24px;
+      border-top-right-radius: 24px;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+
+    .e513_4315 {
+      border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+    }
+  </style>
+
+</head>
+
+<body>
+  <div class=e503_4234>
+    <div class=e503_4804>
+      <div class="e503_4805"></div><span class="e508_4867">Clave de acceso Numero</span><span class="e503_4862">Tipo
+        moneda:</span><span class="e508_4864">Clave de acceso:</span><span class="e503_4861">Emisión:</span><span
+        class="e503_4860">Ambiente:</span><span class="e503_4858">Número de autorización:</span><span
+        class="e503_4859">Fecha y hora de autorización:</span><span class="e503_4857">No:</span><span
+        class="e503_4856">TIPO DOCUMENTO</span><span class="e503_4855">RUC</span>
+    </div>
+    <div class=e503_4355>
+      <div class="e503_4356"></div><span class="e508_5174">Contribuyente especial:</span><span
+        class="e508_5172">Establecimiento:</span><span class="e508_5173">Obligado a llevar Contabilidad:</span><span
+        class="e508_5171">Matriz:</span><span class="e508_5170">MI COMISARIATO</span>
+    </div>
+    <div class=e503_4802>
+      <div class="e503_4803"></div>
+    </div>
+    <div class=e508_5164>
+      <div class="e508_5165"></div>
+    </div>
+    <div class=e503_4800>
+      <div class="e503_4801"></div><span class="e508_5169">Dirección:</span><span class="e508_5166">CEDULA: </span><span
+        class="e508_5161">Razón social / Nombres y Apellidos:</span><span class="e508_5168">Fecha de Emisión:</span>
+    </div>
+    <div class=e513_4314>
+      <div class="e513_4315"></div>
+    </div>
+  </div>
+</body>
+
+</html>
