--- a/backend/assets/templates/comprobantes/factura.html
+++ b/backend/assets/templates/comprobantes/factura.html
@@ -6,10 +6,14 @@
   <title>Visualización Documento electrónico</title>
   <meta name="author" content="htmlGenerator">
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="styles.css">
 
   <style>
+    @page {
+        size: A4; /* Change from the default size of A4 */
+        /* margin: 5mm; Set margin on each page */
+      }
+
     body {
       background: #E5E5E5;
     }
@@ -34,29 +38,30 @@
     }
 
     .e503_4805 {
-      background-color: rgba(255, 255, 255, 1);
+      background-color: rgb(255, 255, 255);
       width: 311px;
       height: 347.3823547363281px;
       position: absolute;
       left: 0px;
       top: 0px;
-      border-radius: 24px;
+      border-radius: 10px;
+      z-index: -12;
     }
 
     .e503_4805 {
       border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
     }
 
-    .e508_4867 {
+    .clave-Acceso {
       color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
       width: 124.08586120605469px;
       height: 17.323516845703125px;
       position: absolute;
-      left: 94px;
+      left: 27px;
       top: 324px;
       font-family: Patrick Hand;
       text-align: left;
-      font-size: 14px;
+      font-size: 12px;
       letter-spacing: 0;
     }
 
@@ -86,7 +91,7 @@
       letter-spacing: 0;
     }
 
-    .e503_4861 {
+    .emision {
       color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
       width: 81.79693603515625px;
       height: 18.23529052734375px;
@@ -98,13 +103,37 @@
       font-size: 11px;
       letter-spacing: 0;
     }
+    .emision-info {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      right: -35px;
+      top: 183.2646484375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
 
-    .e503_4860 {
+    .ambiente {
       color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
       width: 81.79693603515625px;
       height: 18.23529052734375px;
       position: absolute;
       left: 8.218985557556152px;
+      top: 155.91162109375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 11px;
+      letter-spacing: 0;
+    }
+    .ambiente-info {
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      right: -25px;
       top: 155.91162109375px;
       font-family: Patrick Hand;
       text-align: left;
@@ -164,12 +193,24 @@
       letter-spacing: 0;
     }
 
-    .e503_4855 {
+    .ruc {
       color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
       width: 81.79693603515625px;
       height: 18.23529052734375px;
       position: absolute;
       left: 8.218985557556152px;
+      top: 20.05859375px;
+      font-family: Patrick Hand;
+      text-align: left;
+      font-size: 14px;
+      letter-spacing: 0;
+    }
+    .ruc-info{
+      color: rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
+      width: 81.79693603515625px;
+      height: 18.23529052734375px;
+      position: absolute;
+      right: -25px;
       top: 20.05859375px;
       font-family: Patrick Hand;
       text-align: left;
@@ -192,10 +233,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      border-top-left-radius: 24px;
-      border-top-right-radius: 24px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 10px;
     }
 
     .e503_4356 {
@@ -267,13 +305,68 @@
       letter-spacing: 0;
     }
 
-    .e503_4802 {
+    .table-productos {
       width: 570px;
       height: 214px;
       position: absolute;
+      font-size: 11px;
       left: 12px;
       top: 390px;
+      --bs-table-bg: #1d3852;
+      color: #fff;
+      border-collapse: collapse;
+
     }
+
+    .table-dark {
+      --bs-table-bg: #1d3852;
+      color:white
+    }
+
+    .table>:not(:last-child)>:last-child>* {
+      border-bottom-color: currentColor;
+    }
+
+    .table>:not(caption)>*>* {
+      padding: 0.5rem 0.5rem;
+      background-color: var(--bs-table-bg);
+      border-bottom-width: 1px;
+      box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+    }
+    td{
+      text-align: left;
+      vertical-align: top;
+      border: 1px solid #000;
+      border-collapse: collapse;
+      padding: 0.3em;
+      caption-side: bottom;
+    }
+    th {
+      width: 25%;
+      text-align: left;
+      vertical-align: top;
+      border: 1px solid #000;
+      border-collapse: collapse;
+      padding: 0.3em;
+      caption-side: bottom;
+    }
+    .tabla-totales th{
+      width: 75%;
+      text-align: left;
+      vertical-align: top;
+      border: 1px solid #000;
+      border-collapse: collapse;
+      padding: 0.3em;
+    }
+    .tabla-totales td{
+      width: 25%;
+      text-align: left;
+      vertical-align: top;
+      border: 1px solid #000;
+      border-collapse: collapse;
+      padding: 0.3em;
+    }
+
 
     .e503_4803 {
       background-color: rgba(255, 255, 255, 1);
@@ -282,22 +375,23 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      border-top-left-radius: 24px;
-      border-top-right-radius: 24px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 10px;
     }
 
     .e503_4803 {
       border: 1px solid rgba(68.00000354647636, 35.133336558938026, 35.133336558938026, 1);
     }
 
-    .e508_5164 {
+    .tabla-totales {
       width: 311px;
       height: 215px;
       position: absolute;
       left: 271px;
       top: 614px;
+      font-size: 11px;
+      border-collapse: collapse;
+      --bs-table-bg: #1d3852;
+      color: #fff;
     }
 
     .e508_5165 {
@@ -307,10 +401,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      border-top-left-radius: 24px;
-      border-top-right-radius: 24px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 15px;
     }
 
     .e508_5165 {
@@ -332,10 +423,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      border-top-left-radius: 24px;
-      border-top-right-radius: 24px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 15px;
     }
 
     .e503_4801 {
@@ -394,12 +482,16 @@
       letter-spacing: 0;
     }
 
-    .e513_4314 {
+    .tabla-pago {
       width: 252px;
       height: 153px;
       position: absolute;
       left: 12px;
+      font-size: 11px;
       top: 627px;
+      border-collapse: collapse;
+      --bs-table-bg: #1d3852;
+      color: #fff;
     }
 
     .e513_4315 {
@@ -409,10 +501,7 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      border-top-left-radius: 24px;
-      border-top-right-radius: 24px;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 10px;
     }
 
     .e513_4315 {
@@ -423,32 +512,133 @@
 </head>
 
 <body>
-  <div class=e503_4234>
-    <div class=e503_4804>
-      <div class="e503_4805"></div><span class="e508_4867">Clave de acceso Numero</span><span class="e503_4862">Tipo
-        moneda:</span><span class="e508_4864">Clave de acceso:</span><span class="e503_4861">Emisión:</span><span
-        class="e503_4860">Ambiente:</span><span class="e503_4858">Número de autorización:</span><span
-        class="e503_4859">Fecha y hora de autorización:</span><span class="e503_4857">No:</span><span
-        class="e503_4856">TIPO DOCUMENTO</span><span class="e503_4855">RUC</span>
+  <div class="e503_4234">
+    <div class="e503_4804">
+      <div class="e503_4805">
+      </div>
+      <span class ="clave-Acceso">{{factura.infoTributaria.claveAcceso}}</span>
+      <span class="e503_4862">Tipo moneda:</span>
+      <span class="e508_4864">Clave de acceso:</span>
+      <span class="emision">Emisión:</span>
+      <span class="emision-info">{{factura.infoTributaria.ptoEmi}}</span>
+
+      <span class="ambiente">Ambiente:</span>
+      <span class="ambiente-info">{{factura.infoTributaria.ambiente}}</span>
+      <span class="e503_4858">Número de autorización:</span>
+      <span class="e503_4859">Fecha y hora de autorización:</span>
+      <span class="e503_4857">No:</span>
+      <span class="e503_4856">TIPO DOCUMENTO</span>
+      <span class="ruc">RUC</span>
+      <span class="ruc-info">{{factura.infoTributaria.ruc}}</span>
     </div>
     <div class=e503_4355>
-      <div class="e503_4356"></div><span class="e508_5174">Contribuyente especial:</span><span
-        class="e508_5172">Establecimiento:</span><span class="e508_5173">Obligado a llevar Contabilidad:</span><span
-        class="e508_5171">Matriz:</span><span class="e508_5170">MI COMISARIATO</span>
+      <div class="e503_4356"></div>
+      <span class="e508_5174">Contribuyente especial:</span>
+      <span class="e508_5172">Establecimiento:</span>
+      <span class="e508_5173">Obligado a llevar Contabilidad:</span>
+      <span class="e508_5171">Matriz:</span><span class="e508_5170">MI COMISARIATO</span>
     </div>
-    <div class=e503_4802>
-      <div class="e503_4803"></div>
-    </div>
-    <div class=e508_5164>
-      <div class="e508_5165"></div>
-    </div>
+    <table class="table table-productos">
+      <thead>
+        <tr>
+          <th scope="col">Código principal</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Descripción</th>
+          <th scope="col">Precio Unitario</th>
+          <th scope="col">Descuento</th>
+          <th scope="col">Precio Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        {%for k,detalle in factura.detalles.items %}
+          {% if detalle|length > 1 %}
+            <td>{{detalle|length}}</td>  
+            {%for item in detalle %}
+            <tr>
+              <td>{{item.codigoPrincipal}}</td>
+              <td>{{item.cantidad}}</td>
+              <td>{{item.descripcion}}</td>
+              <td>{{item.precioUnitario}}</td>
+              <td>{{item.descuento}}</td>
+              <td>{{item.precioTotalSinImpuesto}}</td>
+            </tr>
+            {%endfor%}
+          {% else %}
+            <tr>
+              <td>{{detalle.codigoPrincipal}}</td>
+              <td>{{detalle.cantidad}}</td>
+              <td>{{detalle.descripcion}}</td>
+              <td>{{detalle.precioUnitario}}</td>
+              <td>{{detalle.descuento}}</td>
+              <td>{{detalle.precioTotalSinImpuesto}}</td> 
+            </tr>
+          {% endif %}
+        {%endfor%}
+      </tbody>
+    </table>
+    <table class="table tabla-totales">
+      <tbody>
+
+        <tr>
+          <th>Subtotal 12%</th>
+          <td>dato</td>
+        </tr>
+        <tr>
+          <th>Subtotal 0%</th>
+          <td> dato</td>
+        </tr>
+        <tr>
+          <th>Subtotal no sujeto de IVA</th>  
+          <td>dato</td>
+        </tr>
+        <tr>
+          <th>Subtotal sin impuestos %</th> 
+          <td>{{factura.infoFactura.totalSinImpuestos}}</td>
+        </tr>
+        <tr>
+          <th>Subtotal no sujeto de IVA</th>  
+          <td>dato</td>
+        </tr>
+        <tr>
+          <th>IVA</th>
+          <td>{{factura.infoFactura.pagos.pago.total}} {{factura.infoFactura.totalSinImpuestos}} </td>
+        </tr>
+        <tr>
+          <th>Propina</th>
+          <td>{{factura.infoFactura.propina}}</td>
+        </tr>
+        <tr>
+          <th>Valor total</th>
+          <td>{{factura.infoFactura.pagos.pago.total}}</td>
+        </tr>
+        
+      </tbody>
+    </table>
     <div class=e503_4800>
-      <div class="e503_4801"></div><span class="e508_5169">Dirección:</span><span class="e508_5166">CEDULA: </span><span
-        class="e508_5161">Razón social / Nombres y Apellidos:</span><span class="e508_5168">Fecha de Emisión:</span>
+      <div class="e503_4801"></div>
+      <span class="e508_5169">Dirección:</span>
+      <span class="e508_5166">CEDULA: </span>
+      <span class="e508_5161">Razón social / Nombres y Apellidos:</span>
+      <span class="e508_5168">Fecha de Emisión:</span>
     </div>
-    <div class=e513_4314>
-      <div class="e513_4315"></div>
-    </div>
+    <table class="table tabla-pago">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">Forma de pago</th>
+          <th scope="col">Valor</th>
+          <th scope="col">Plazo</th>
+          <th scope="col">Tiempo</th>
+        </tr>
+      </thead>
+      <tbody>
+        {%for k,pago in factura.infoFactura.pagos.items %}
+            <td>{{pago.formaPago}}</td>
+            <td>{{pago.total}}</td>
+            <td>{{pago.plazo}}</td>
+            <td>{{pago.unidadTiempo}}</td>
+        {%endfor%}
+      </tbody>
+    </table>
   </div>
 </body>
 
