Modificaicones para la visualizacion

--- a/backend/assets/templates/comprobantes/factura.html
+++ b/backend/assets/templates/comprobantes/factura.html
@@ -632,6 +632,7 @@
       </thead>
       <tbody>
         {%for k,pago in factura.infoFactura.pagos.items %}
+          <td>pago</td>
             <td>{{pago.formaPago}}</td>
             <td>{{pago.total}}</td>
             <td>{{pago.plazo}}</td>
